created models, forms, config

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,7 +4,7 @@
 
 {% block content %} 
 
-<form>
+<form method="post">
     {{ form.csrf_token }}
     <div class="form-group">
         {{ form.name.label }}
