added more bootstrap

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,5 +3,6 @@
 {% block title %} Home {% endblock title %} 
 
 {% block content %} 
+<h3 class="text-center mt-3">Ready to register with us? Click Register!</h3>
 
 {% endblock content %}
