--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -3,10 +3,10 @@
 {% block title %} Register {% endblock title %} 
 
 {% block content %} 
-
+<h3 class="text-center mt-3">Register your phone number and address</h3>
 <form method="post">
     {{ form.csrf_token }}
-    <div class="form-group">
+    <div class="form-group ms-5 me-5">
         {{ form.name.label }}
         {{ form.name(class='form-control', placeholder="Enter Name") }}
 
@@ -16,7 +16,7 @@
         {{ form.address.label }}
         {{ form.address(class='form-control', placeholder="Enter Address") }}
 
-        {{ form.submit(class='btn btn-primary w-100 mt-3')}}
+        {{ form.submit(class='btn btn-success w-100 mt-3')}}
     </div>
 </form>
 
