--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a>
+                    <a class="nav-link" href="{{ url_for('signup') }}">Sign Up</a>
                     <a class="nav-link" href="{{ url_for('register') }}">Register</a>
                 </div>
                 </div>
