created login form and page

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -3,7 +3,7 @@
 {% block title %} Register {% endblock title %} 
 
 {% block content %} 
-<h3 class="text-center mt-3">Register your phone number and address</h3>
+<h3 class="text-center mt-3">Add Contact to your Address Book</h3>
 <form method="post">
     {{ form.csrf_token }}
     <div class="form-group ms-5 me-5">
