--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,8 +20,12 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a>
+                    {% if current_user.is_authenticated %}
+                    <a class="nav-link" href="{{ url_for('register') }}">Add Contact</a>
+                    {% else %}
                     <a class="nav-link" href="{{ url_for('signup') }}">Sign Up</a>
-                    <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+                    <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                    {% endif %}
                 </div>
                 </div>
             </div>
