added view contacts page that displays only contacts of current user

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 
-<form action="" method="post">
-    {{ form.csrt_token }}
+<form method="post">
+    {{ form.csrf_token }}
     <div class="form-group ms-5 me-5">
 
         {{ form.username.label }}
