--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,6 +22,8 @@
                     <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a>
                     {% if current_user.is_authenticated %}
                     <a class="nav-link" href="{{ url_for('register') }}">Add Contact</a>
+                    <a class="nav-link" href="{{ url_for('view') }}">View Contacts</a>
+                    <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                     {% else %}
                     <a class="nav-link" href="{{ url_for('signup') }}">Sign Up</a>
                     <a class="nav-link" href="{{ url_for('login') }}">Login</a>
