--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,7 @@
 {% block title %} Home {% endblock title %} 
 
 {% block content %} 
-<h3 class="text-center mt-3">Ready to register with us? Click Register!</h3>
+<h3 class="text-center mt-3">Welcome to Address Book!</h3>
+<h4 class="text-center">Conveniently keep track of your contacts with this secure website.</h4>
 
 {% endblock content %}
