--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+<h2 class="text-center mt-3">Login</h2>
+
 <form method="post">
     {{ form.csrf_token }}
     <div class="form-group ms-5 me-5">
