--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h2> Edit Phone Number or Address for {{ address.name }} </h2>
+<h3 class="text-center mt-3"> Edit Phone Number or Address for {{ address.name }} </h3>
 
 <form action="" method="post">
     {{form.csrf_token}}
@@ -18,7 +18,7 @@
         {{ form.address.label }}
         {{ form.address(class='form-control', value=address.address) }}
 
-        {{ form.submit(class='btn btn-success') }}
+        {{ form.submit(class='btn btn-success w-100 mt-3') }}
     </div>
 </form>
 
