--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h2 class="text-center">Sign Up Here</h2>
+<h2 class="text-center mt-3">Sign Up</h2>
 
 <form method="post">
     {{ form.csrf_token }}
