--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -9,14 +9,26 @@
 <form action="" method="post">
     {{form.csrf_token}}
     <div class="form-group">
-        {{ form.name.label }}
-        {{ form.name(class='form-control', value=address.name) }}
+        {{ form.first_name.label }}
+        {{ form.first_name(class='form-control', value=address.first_name) }}
+
+        {{ form.last_name.label }}
+        {{ form.last_name(class='form-control', value=address.last_name) }}
 
         {{ form.phone_number.label }}
         {{ form.phone_number(class='form-control', value=address.phone_number) }}
 
         {{ form.address.label }}
         {{ form.address(class='form-control', value=address.address) }}
+
+        {{ form.city.label }}
+        {{ form.city(class='form-control', value=address.city) }}
+
+        {{ form.state.label }}
+        {{ form.state(class='form-control', value=address.state) }}
+
+        {{ form.zip_code.label }}
+        {{ form.zip_code(class='form-control', value=address.zip_code) }}
 
         {{ form.submit(class='btn btn-success w-100 mt-3') }}
     </div>
