--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -7,14 +7,26 @@
 <form method="post">
     {{ form.csrf_token }}
     <div class="form-group ms-5 me-5">
-        {{ form.name.label }}
-        {{ form.name(class='form-control', placeholder="Enter Name") }}
+        {{ form.first_name.label }}
+        {{ form.first_name(class='form-control', placeholder="Enter First Name") }}
+
+        {{ form.last_name.label }}
+        {{ form.last_name(class='form-control', placeholder="Enter Last Name") }}
 
         {{ form.phone_number.label }}
-        {{ form.phone_number(class='form-control', placeholder="Enter Phone Number") }}
+        {{ form.phone_number(class='form-control', placeholder="Enter Phone Number e.g. 1234567890") }}
 
         {{ form.address.label }}
         {{ form.address(class='form-control', placeholder="Enter Address") }}
+
+        {{ form.city.label }}
+        {{ form.city(class='form-control', placeholder="Enter City") }}
+
+        {{ form.state.label }}
+        {{ form.state(class='form-control', placeholder="Enter State e.g. TX") }}
+
+        {{ form.zip_code.label }}
+        {{ form.zip_code(class='form-control', placeholder="Enter Zip Cod e.g. 12345") }}
 
         {{ form.submit(class='btn btn-success w-100 mt-3')}}
     </div>
