--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -5,13 +5,16 @@
 {% block content %}
 
 {% if current_user.is_authenticated %}
-    <h3 class="text-center mt-3">Your Contacts</h3>
-    {% for address in addresses | sort(attribute='name') %}
-        <div class="card w-50 ">
+    <h3 class="text-center mt-3 mb-3">Your Contacts</h3>
+    {% for address in addresses | sort(attribute='last_name') %}
+        <div class="card w-50 mt-4 mb-3 ms-auto me-auto text-center">
             <div class="card-body">
 
-                <h5 class="card-title">{{ address.name }}</h5>
-                <p class="card-text">{{ address.address }}<br>({{ address.phone_number[:3] }}) {{ address.phone_number[3:6] }}-{{ address.phone_number[6:] }}</p>
+                <h5 class="card-title mb-3">{{ address.first_name }} {{ address.last_name }}</h5>
+                <p class="card-text">
+                    {{ address.address }}<br>
+                    {{ address.city }}, {{ address.state }} {{ address.zip_code }}</p>
+                <p class="card-text">({{ address.phone_number[:3] }}) {{ address.phone_number[3:6] }}-{{ address.phone_number[6:] }}</p>
                 {% if current_user == address.book_user %}
                 <a href="{{ url_for('edit', id=address.id) }}" class="btn btn-primary btn-sm">Edit</a>
                 <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal">Delete</button>
