made css changes

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -16,7 +16,7 @@
         {{ form.password.label }}
         {{ form.password(class='form-control', placeholder='Enter Password') }}
 
-        {{ form.submit(class='btn btn-success w-100 mt-3')}}
+        {{ form.submit(class='btn btn-warning w-100 mt-3')}}
     </div>
 </form>
 
