--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -23,12 +23,12 @@
         {{ form.city(class='form-control', placeholder="Enter City") }}
 
         {{ form.state.label }}
-        {{ form.state(class='form-control', placeholder="Enter State e.g. TX") }}
+        {{ form.state(class='form-control', placeholder="Select State") }}
 
         {{ form.zip_code.label }}
-        {{ form.zip_code(class='form-control', placeholder="Enter Zip Cod e.g. 12345") }}
+        {{ form.zip_code(class='form-control', placeholder="Enter Zip Code e.g. 12345") }}
 
-        {{ form.submit(class='btn btn-success w-100 mt-3')}}
+        {{ form.submit(class='btn btn-warning w-100 mt-3')}}
     </div>
 </form>
 
