--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h3 class="text-center mt-3"> Edit Phone Number or Address for {{ address.name }} </h3>
+<h3 class="text-center mt-3"> Edit Phone Number or Address for {{ address.first_name }} </h3>
 
 <form action="" method="post">
     {{form.csrf_token}}
