--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,6 @@
 
 {% block content %} 
 <h3 class="text-center mt-3">Welcome to Address Book!</h3>
-<h4 class="text-center">Conveniently keep track of your contacts with this secure website.</h4>
+<h4 class="text-center mt-3">Conveniently keep track of your contacts with this secure website.</h4>
 
 {% endblock content %}
