fixed delete bug

--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -21,26 +21,26 @@
             {% endif %}
             {% if current_user == address.book_user %}
             <a href="{{ url_for('edit', id=address.id) }}" class="btn btn-warning btn-sm">Edit</a>
-            <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal">Delete</button>
+            <button type="button" class="btn btn-warning btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal-{{ address.id }}">Delete</button>
 
             <!-- Modal -->
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Are you sure?</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            Are you sure you want to delete {{ address.first_name }} from your contacts?
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <a href="{{ url_for('delete', id=address.id) }}" class="btn btn-success">Delete</a>
-                        </div>
-                        </div>
+            <div class="modal fade" id="exampleModal-{{ address.id }}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Are you sure?</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Are you sure you want to delete {{ address.first_name }} from your contacts?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <a href="{{ url_for('delete', id=address.id) }}" class="btn btn-success">Delete</a>
+                    </div>
                     </div>
                 </div>
+            </div>
             {% endif %}
         </div>
     </div>
